practice/labs/ch12-ingress/lab05-gateway-api-routing/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mall-gateway
  namespace: default
spec:
  gatewayClassName: local-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
